k8s-235/apps/traefik/overlays/prod/resources/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
spec:
  forwardAuth:
    address: http://oauth2-proxy.traefik.svc.cluster.local/oauth2/auth_or_start
    trustForwardHeader: true
    authResponseHeaders:
    - X-Auth-Request-Access-Token
    - Authorization
