k8s-235/apps/traefik/overlays/prod/resources/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.k8s.235.tdude.co
    external-dns.alpha.kubernetes.io/target: "24.225.136.165,2a10:4741:36:32:3::2"
spec:
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
  - IPv4
  - IPv6
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    targetPort: web
    protocol: TCP
  - name: https
    port: 443
    targetPort: websecure
    protocol: TCP
  - name: http3
    port: 443
    targetPort: websecureudp
    protocol: UDP
  selector:
    app.kubernetes.io/name: traefik
